@@ -14,10 +14,10 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Device-Id"));
-        configuration.setExposedHeaders(List.of("X-Device-Id")); // 👈 Quan trọng
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Device-Id", "refreshtoken"));
+        configuration.setExposedHeaders(List.of("X-Device-Id", "refreshtoken")); // 👈 Quan trọng
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
